# gds

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  README.md  manage.py  pyproject.toml  runtests.py  tox.ini
.tx/: transifex.yml
allianceauth/: __init__.py  apps.py  context_processors.py  hooks.py  urls.py  views.py
allianceauth/analytics/: admin.py  apps.py  models.py  tasks.py  utils.py
allianceauth/authentication/: admin.py  app_settings.py  apps.py  auth_hooks.py  backends.py  constants.py  decorators.py  forms.py  hmac_urls.py  managers.py  middleware.py  models.py  signals.py  tasks.py  urls.py  views.py
allianceauth/corputils/: admin.py  auth_hooks.py  managers.py  models.py  tests.py  urls.py  views.py
allianceauth/eveonline/: admin.py  managers.py  models.py  providers.py  swagger.json  tasks.py
allianceauth/fleetactivitytracking/: admin.py  apps.py  auth_hooks.py  forms.py  models.py  swagger.json  urls.py  views.py
allianceauth/framework/: __init__.py  apps.py
allianceauth/groupmanagement/: admin.py  apps.py  auth_hooks.py  forms.py  managers.py  models.py  signals.py  tasks.py  urls.py  views.py
allianceauth/hrapplications/: admin.py  auth_hooks.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
allianceauth/menu/: admin.py  apps.py  constants.py  filters.py  forms.py  hooks.py  managers.py  models.py
allianceauth/notifications/: __init__.py  admin.py  core.py  handlers.py  managers.py  models.py  urls.py  views.py
allianceauth/optimer/: admin.py  auth_hooks.py  form.py  form_widgets.py  models.py  urls.py  views.py
allianceauth/permissions_tool/: apps.py  auth_hooks.py  tests.py  urls.py  views.py
allianceauth/project_template/: supervisor.conf
allianceauth/services/: abstract.py  admin.py  auth_hooks.py  forms.py  hooks.py  models.py  signals.py  tasks.py  urls.py
allianceauth/srp/: auth_hooks.py  form.py  managers.py  models.py  providers.py  swagger.json  urls.py  views.py
allianceauth/templatetags/: admin_status.py
allianceauth/tests/: auth_utils.py  test_auth_utils.py  test_urls.py  test_views.py
allianceauth/theme/: apps.py  hooks.py
allianceauth/timerboard/: auth_hooks.py  form.py  models.py  tests.py  urls.py  views.py
allianceauth/utils/: cache.py  counters.py  django.py  testing.py
docker/: .env.example  .gitignore  Dockerfile  custom.dockerfile  docker-compose.yml  grafana-dashboards.yml  grafana-datasource.yml  setup.base.sql
docker/conf/: local.py  (+1 more)
docs/: conf.py  index.md  make.bat
tests/: celery.py  settings_all.py  settings_core.py  urls.py
(+615 files in other folders)
